--- a/qgis2web_2022_11_02-12_11_46_968029/index.html
+++ b/qgis2web_2022_11_02-12_11_46_968029/index.html
@@ -20,7 +20,7 @@
             margin: 0;
         }
         </style>
-        <title>PRUEBA</title>
+        <title>PRUEBA GITHUB</title>
     </head>
     <body>
         <div id="map">
@@ -249,7 +249,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>PRUEBA</h2>';
+                this._div.innerHTML = '<h2>PRUEBA Github</h2>';
             };
             title.addTo(map);
             var abstract = new L.Control({'position':'bottomright'});
